# ncpass

./: README.md  pyproject.toml
scripts/: rofi-ncloud
src/: api.py  client.py  exceptions.py  ncapp.py  ncp.py  session.py
